--- a/app/src/main/res/layout/fragment_learn.xml
+++ b/app/src/main/res/layout/fragment_learn.xml
@@ -6,32 +6,6 @@
         android:layout_height="match_parent"
         xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-        <TextView
-                android:id="@+id/text_header"
-                android:text="@string/learn"
-                android:textColor="@color/colorOrange"
-                android:fontFamily="@font/pacifico"
-                android:textSize="26sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"/>
-
-        <com.yuyakaido.android.cardstackview.CardStackView
-                android:id="@+id/cardstack_words"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-        </com.yuyakaido.android.cardstackview.CardStackView>
-
-    </LinearLayout>
-
-
     <ProgressBar
             android:id="@+id/progressbar_learn"
             android:layout_width="wrap_content"
@@ -76,7 +50,7 @@
             android:id="@+id/layout_learned"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone">
+            android:visibility="visible">
 
         <TextView
                 android:text="@string/smile"
@@ -97,5 +71,30 @@
                 android:layout_height="wrap_content"/>
 
     </FrameLayout>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        <TextView
+                android:id="@+id/text_header"
+                android:text="@string/learn"
+                android:textColor="@color/colorOrange"
+                android:fontFamily="@font/pacifico"
+                android:textSize="26sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"/>
+
+        <com.yuyakaido.android.cardstackview.CardStackView
+                android:id="@+id/cardstack_words"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+        </com.yuyakaido.android.cardstackview.CardStackView>
+
+    </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
