--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,13 +15,10 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:visibility="gone"/>
 
-    <fragment
-            android:id="@+id/nav_fragment_login"
-            android:name="androidx.navigation.fragment.NavHostFragment"
+    <FrameLayout
+            android:id="@+id/layout_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/login_graph"/>
+            android:layout_height="match_parent"/>
 
     <ProgressBar
             android:elevation="16dp"
