--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -8,170 +8,198 @@
         tools:context=".view.activity.UserActivity"
         android:id="@+id/layout_user">
 
-    <Button
-            android:id="@+id/button_back"
-            android:layout_width="48dp"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_arrow_back_black_24dp"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:layout_marginTop="12dp"
-            android:layout_marginStart="8dp"
-            android:onClick="onBackButtonClick"/>
+    <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp">
 
-    <LinearLayout
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <androidx.appcompat.widget.Toolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="68dp"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    app:layout_collapseMode="pin">
+
+                <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    <TextView
+                            android:id="@+id/text_header"
+                            android:text="@string/account"
+                            android:textColor="@color/colorOrange"
+                            android:fontFamily="@font/pacifico"
+                            android:textSize="26sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginStart="-8dp"/>
+
+                    <Button
+                            android:id="@+id/button_back"
+                            android:layout_width="48dp"
+                            android:layout_height="wrap_content"
+                            android:drawableStart="@drawable/ic_arrow_back_black_24dp"
+                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                            android:layout_marginTop="12dp"
+                            android:onClick="onBackButtonClick"/>
+
+                </FrameLayout>
+
+            </androidx.appcompat.widget.Toolbar>
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_marginBottom="70dp"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-        <TextView
-                android:id="@+id/text_header"
-                android:text="@string/account"
-                android:textColor="@color/colorOrange"
-                android:fontFamily="@font/pacifico"
-                android:textSize="26sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"/>
-
-        <androidx.cardview.widget.CardView
-                android:id="@+id/card_avatar"
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:transitionName="trtext_card"
-                app:cardCornerRadius="10dp"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:layout_margin="8dp">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/imageview_avatar"
-                        android:layout_width="128dp"
-                        android:layout_height="128dp"
-                        android:src="@drawable/avatar_placeholder"
-                        app:civ_border_color="@color/colorOrange"
-                        app:civ_border_width="2dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="32dp"
-                        android:transitionName="trtext_avatar"/>
-
-                <TextView
-                        android:id="@+id/text_username"
-                        tools:text="your@email.com"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:textSize="24sp"
-                        android:layout_margin="8dp"
-                        android:layout_gravity="center_horizontal"
-                        android:transitionName="trtext_username"/>
-
-                <TextView
-                        android:id="@+id/text_level"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:text="Level"
-                        android:textSize="18sp"
-                        android:layout_gravity="center_horizontal"
-                        android:transitionName="trtext_level"
-                        android:layout_marginBottom="16dp"/>
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:transitionName="trtext_second_card"
-                app:cardCornerRadius="10dp"
-                android:layout_margin="8dp">
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                <TextView
-                        android:id="@+id/button_change_email"
-                        android:textSize="16sp"
-                        android:text="@string/change_email"
-                        android:textColor="@color/colorBlack"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="16dp"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:onClick="onEmailChangeClickButton"/>
-
-                <TextView
-                        android:id="@+id/button_change_username"
-                        android:textSize="16sp"
-                        android:text="@string/change_username"
-                        android:textColor="@color/colorBlack"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="16dp"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:onClick="onUsernameChangeClickButton"/>
-
-                <TextView
-                        android:id="@+id/button_change_password"
-                        android:textSize="16sp"
-                        android:text="@string/change_password"
-                        android:textColor="@color/colorBlack"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="16dp"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:onClick="onPasswordChangeClickButton"/>
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="10dp"
-                android:layout_margin="8dp">
-
-            <TextView
-                    android:id="@+id/button_logout"
-                    android:textSize="16sp"
-                    android:text="@string/logout"
-                    android:textColor="@color/colorRed"
+            <androidx.cardview.widget.CardView
+                    android:id="@+id/card_avatar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp"
+                    android:transitionName="trtext_card"
+                    app:cardCornerRadius="10dp"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:focusable="true"
-                    android:onClick="onLogOutButtonClick"/>
+                    android:layout_margin="8dp">
+
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/imageview_avatar"
+                            android:layout_width="128dp"
+                            android:layout_height="128dp"
+                            android:src="@drawable/avatar_placeholder"
+                            app:civ_border_color="@color/colorOrange"
+                            app:civ_border_width="2dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="32dp"
+                            android:transitionName="trtext_avatar"/>
+
+                    <TextView
+                            android:id="@+id/text_username"
+                            tools:text="your@email.com"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:textSize="24sp"
+                            android:layout_margin="8dp"
+                            android:layout_gravity="center_horizontal"
+                            android:transitionName="trtext_username"/>
+
+                    <TextView
+                            android:id="@+id/text_level"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            tools:text="Level"
+                            android:textSize="18sp"
+                            android:layout_gravity="center_horizontal"
+                            android:transitionName="trtext_level"
+                            android:layout_marginBottom="16dp"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:transitionName="trtext_second_card"
+                    app:cardCornerRadius="10dp"
+                    android:layout_margin="8dp">
+
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                    <TextView
+                            android:id="@+id/button_change_email"
+                            android:textSize="16sp"
+                            android:text="@string/change_email"
+                            android:textColor="@color/colorBlack"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="16dp"
+                            android:foreground="?android:attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:onClick="onEmailChangeClickButton"/>
+
+                    <TextView
+                            android:id="@+id/button_change_username"
+                            android:textSize="16sp"
+                            android:text="@string/change_username"
+                            android:textColor="@color/colorBlack"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="16dp"
+                            android:foreground="?android:attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:onClick="onUsernameChangeClickButton"/>
+
+                    <TextView
+                            android:id="@+id/button_change_password"
+                            android:textSize="16sp"
+                            android:text="@string/change_password"
+                            android:textColor="@color/colorBlack"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="16dp"
+                            android:foreground="?android:attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:onClick="onPasswordChangeClickButton"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="10dp"
+                    android:layout_margin="8dp">
+
+                <TextView
+                        android:id="@+id/button_logout"
+                        android:textSize="16sp"
+                        android:text="@string/logout"
+                        android:textColor="@color/colorRed"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:onClick="onLogOutButtonClick"/>
 
 
-        </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/button_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_done_white_24dp"
-            android:layout_gravity="bottom|end"/>-->
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
