--- a/app/src/main/res/layout/card_word.xml
+++ b/app/src/main/res/layout/card_word.xml
@@ -232,6 +232,34 @@
     </FrameLayout>
 
     <FrameLayout
+            android:id="@+id/layout_done"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0">
+
+        <ImageView
+                android:src="@drawable/ic_done_white_24dp"
+                android:background="@color/colorGreen"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+    </FrameLayout>
+
+    <FrameLayout
+            android:id="@+id/layout_again"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0">
+
+        <ImageView
+                android:src="@drawable/ic_refresh_white_24dp"
+                android:background="@color/colorOrange"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+    </FrameLayout>
+
+    <FrameLayout
             android:id="@+id/layout_choose_word"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
