--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -18,16 +18,16 @@
             android:visibility="visible">
 
         <ImageView
-                android:src="@drawable/ic_error_outline_orange_24dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:src="@drawable/error"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:textSize="32sp"
                 android:textColor="@color/colorOrange"
                 android:textStyle="bold"/>
 
         <TextView
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="100dp"
                 android:text="@string/network_error"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:textSize="18sp"
