card word text bug fix

--- a/app/src/main/res/layout/card_word.xml
+++ b/app/src/main/res/layout/card_word.xml
@@ -36,7 +36,8 @@
                 tools:text="word"
                 android:textSize="32sp"
                 android:textStyle="bold"
-                android:layout_width="wrap_content"
+                android:layout_width="350dp"
+                android:textAlignment="center"
                 android:layout_height="wrap_content"
                 android:id="@+id/word_show_english_text"
                 android:layout_gravity="center_horizontal|center_vertical"
@@ -83,7 +84,8 @@
                 tools:text="word"
                 android:textSize="32sp"
                 android:textStyle="bold"
-                android:layout_width="wrap_content"
+                android:layout_width="350dp"
+                android:textAlignment="center"
                 android:layout_height="wrap_content"
                 android:id="@+id/word_variant_english_text"
                 android:layout_gravity="center_horizontal"
@@ -167,7 +169,8 @@
                 tools:text="word"
                 android:textSize="32sp"
                 android:textStyle="bold"
-                android:layout_width="wrap_content"
+                android:layout_width="350dp"
+                android:textAlignment="center"
                 android:layout_height="wrap_content"
                 android:id="@+id/word_write_english_text"
                 android:layout_gravity="center_horizontal"
@@ -269,7 +272,8 @@
                 tools:text="word"
                 android:textSize="32sp"
                 android:textStyle="bold"
-                android:layout_width="wrap_content"
+                android:layout_width="350dp"
+                android:textAlignment="center"
                 android:layout_height="wrap_content"
                 android:id="@+id/word_choose_english_text"
                 android:layout_gravity="center_horizontal"
