--- a/app/src/main/res/layout/card_word.xml
+++ b/app/src/main/res/layout/card_word.xml
@@ -34,6 +34,7 @@
 
         <TextView
                 tools:text="word"
+                android:alpha="0.7"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 android:layout_width="350dp"
@@ -54,6 +55,7 @@
 
         <TextView
                 tools:text="слово"
+                android:alpha="0.7"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
@@ -82,6 +84,7 @@
 
         <TextView
                 tools:text="word"
+                android:alpha="0.7"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 android:layout_width="350dp"
@@ -167,6 +170,7 @@
 
         <TextView
                 tools:text="word"
+                android:alpha="0.7"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 android:layout_width="350dp"
@@ -270,6 +274,7 @@
 
         <TextView
                 tools:text="word"
+                android:alpha="0.7"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 android:layout_width="350dp"
@@ -303,6 +308,7 @@
                     android:id="@+id/choose_one_button"
                     android:layout_height="70dp"
                     android:layout_width="170dp"
+                    android:textColor="?android:colorAccent"
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     tools:text="word1"
                     android:layout_margin="8dp"
@@ -312,6 +318,7 @@
                     android:id="@+id/choose_two_button"
                     android:layout_height="70dp"
                     android:layout_width="170dp"
+                    android:textColor="?android:colorAccent"
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     tools:text="word2"
                     android:layout_margin="8dp"
@@ -321,6 +328,7 @@
                     android:id="@+id/choose_three_button"
                     android:layout_height="70dp"
                     android:layout_width="170dp"
+                    android:textColor="?android:colorAccent"
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     tools:text="word3"
                     android:layout_margin="8dp"
@@ -330,6 +338,7 @@
                     android:id="@+id/choose_four_button"
                     android:layout_height="70dp"
                     android:layout_width="170dp"
+                    android:textColor="?android:colorAccent"
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     tools:text="word4"
                     android:layout_margin="8dp"
