--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent" android:layout_height="match_parent"
-        android:backgroundTint="?android:colorPrimary">
+        android:background="?android:colorPrimary">
 
     <ProgressBar
             android:id="@+id/progressbar_account"
@@ -128,6 +128,7 @@
                             android:layout_height="wrap_content"
                             tools:text="Username"
                             android:textStyle="bold"
+                            android:alpha="0.7"
                             android:textSize="24sp"
                             android:transitionName="trtext_username"
                             android:layout_marginStart="16dp"
@@ -139,6 +140,7 @@
                             android:layout_height="wrap_content"
                             tools:text="Level"
                             android:textSize="18sp"
+                            android:alpha="0.7"
                             android:transitionName="trtext_level"
                             android:layout_marginStart="16dp"
                             android:layout_toEndOf="@+id/imageview_avatar"
