--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?android:colorPrimary">
 
     <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -58,7 +59,6 @@
                             android:id="@+id/text_about"
                             android:text="@string/about_application"
                             android:textSize="16sp"
-                            android:textColor="@color/colorBlack"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
