finally add dark theme

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -29,6 +29,46 @@
                     android:layout_marginBottom="8dp"/>
 
             <TextView
+                    android:text="@string/dark_theme"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="16dp"/>
+
+            <androidx.cardview.widget.CardView
+                    android:id="@+id/card_dark_theme"
+                    android:layout_width="match_parent"
+                    app:cardCornerRadius="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:transitionName="trtext_about">
+
+                <FrameLayout
+                        android:id="@+id/button_dark_theme"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:focusable="true">
+
+                    <TextView
+                            android:id="@+id/text_dark_theme"
+                            android:text="@string/setup_dark_theme"
+                            android:textSize="16sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="16dp"/>
+
+                </FrameLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
                     android:text="@string/about_caps"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
