--- a/app/src/main/res/layout-land/card_word.xml
+++ b/app/src/main/res/layout-land/card_word.xml
@@ -33,9 +33,10 @@
 
         <TextView
                 tools:text="word"
+                android:textAlignment="center"
+                android:layout_width="350dp"
                 android:textSize="32sp"
                 android:textStyle="bold"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/word_show_english_text"
                 android:layout_gravity="center_horizontal|center_vertical"
@@ -54,7 +55,8 @@
                 tools:text="слово"
                 android:textSize="32sp"
                 android:textStyle="bold"
-                android:layout_width="wrap_content"
+                android:textAlignment="center"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/word_show_translate_text"
                 android:layout_gravity="center_vertical|center_horizontal"
@@ -79,7 +81,8 @@
                 tools:text="word"
                 android:textSize="32sp"
                 android:textStyle="bold"
-                android:layout_width="wrap_content"
+                android:textAlignment="center"
+                android:layout_width="400dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/word_variant_english_text"
                 android:layout_gravity="center_horizontal"
@@ -162,7 +165,8 @@
                 tools:text="word"
                 android:textSize="32sp"
                 android:textStyle="bold"
-                android:layout_width="wrap_content"
+                android:textAlignment="center"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/word_write_english_text"
                 android:layout_gravity="center_horizontal"
@@ -246,7 +250,8 @@
                 tools:text="word"
                 android:textSize="32sp"
                 android:textStyle="bold"
-                android:layout_width="wrap_content"
+                android:textAlignment="center"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/word_choose_english_text"
                 android:layout_gravity="center_horizontal"
