--- a/app/src/main/res/layout/card_word.xml
+++ b/app/src/main/res/layout/card_word.xml
@@ -58,7 +58,8 @@
                 android:alpha="0.7"
                 android:textSize="32sp"
                 android:textStyle="bold"
-                android:layout_width="wrap_content"
+                android:textAlignment="center"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/word_show_translate_text"
                 android:layout_gravity="center_vertical|center_horizontal"
