--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -30,10 +30,11 @@
             app:layout_constraintVertical_bias="0.0" android:id="@+id/textView"/>
 
     <Button
-            android:layout_width="150dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             style="@style/Widget.AppCompat.Button.Colored"
             android:text="@string/create_account"
+            android:textColor="@color/colorWhite"
             android:onClick="onCreateButtonClick"
             android:id="@+id/create_button" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
@@ -46,7 +47,8 @@
             android:id="@+id/login_button"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:text="@string/sign_in"
-            android:layout_width="150dp"
+            android:layout_width="200dp"
+            android:textColor="?android:colorAccent"
             android:onClick="onSignInButtonClick"
             android:layout_height="wrap_content" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
